feat: OpenSearch Implementation (#3319)
Co-authored-by: Dmitriy Melnychuk <123628255+ce-dmelnych@users.noreply.github.com>
Co-authored-by: Dmitriy Melnychuk <dmitriy.melnychuk@capgemini.com>
Co-authored-by: Nathanyel Sandi <nathan.sandi@gmail.com>